# dotfiles

./: .Xresources  .bashrc  .gitignore  .tmux.conf  .tmux.conf.aws  .vimrc  .xbindkeysrc  .xbindkeysrc.archair  .xinitrc  .xinitrc.macbook  .xprofile  .zshrc  .zshrc.aws  .zshrc.macbook  .zshrc.macos  .zshrc.rpi  00-keyboard.conf  configuration.nix  configuration_krauth.nix  cygwin.md  dos2unix.sh  gpg-agent.conf  hardware-configuration.nix  install.conf.yaml  install.conf.yaml.archair  install.conf.yaml.aws  install.conf.yaml.laptop  install.conf.yaml.macbook  install.conf.yaml.macos  install.conf.yaml.rpi  install_archair.sh  install_aws.sh  install_macbook.sh  install_macos.sh  install_rpi.sh  packages.md  packages.yaml  pianoteqnotes.md  setup.sh  setupCeg.sh  (+6 more)
.i3/: config  config.base  config.save  config_bak  themes
bash/: .bashrc
direnv/: .direnvrc
ecmwf_hpc/: .bashrc  .profile  stowPermToHome.sh
emacs/: .emacs
fish/: fish-ssh-agent.sh
nix/: gccEnv.nix  pandocShell.nix
nix-env/: dataEnv.nix  dl.nix  elmShell.nix  gisShell.nix  nodejsShell.nix  pandocShell.nix  pianoteqShell.nix  poetryNixEnvrc  poetryShell.nix  scalaShell.nix
nix-env/databricksPythonSetup/: .gitignore  README.md  pyproject.toml  utils.py
nix_virtualbox/: configuration.nix
pulse/: daemon.conf  default.pa
qemu_windows/: configuration.nix  createvm.bat  installvm.bat
skhd/: .skhdrc
smartdigital/: .bashrc  startSwaySD.sh
sway/: startSway.sh
termite/: config
tmux/: .tmux.conf
tmux_ceg/: .tmux.conf
x/: .Xresources  .xbindkeysrc  .xinitrc  .xserverrc
zellij-n1/: .local
(+167 files in other folders)
